# Trading

./: AUTOPILOT_LOG.md  OPTIONS_RESEARCH.md  RUNBOOK.md  STRATEGY.md  TRADING_PLAYBOOK.md  pyproject.toml
state/: account_state.json  run_log.txt  trade_log.json
strategy/: box_scan.py  circuit_breaker.py  option_scan.py  rh_adapter.py
taxes/: 2025_TAX_PLAN.md  EXECUTION_CHECKLIST.md
taxes/workpapers/: 1099_recipients.csv  djd_sonya_reconciliation.csv  gross_receipts_build.csv
tests/: test_box_scan.py  test_dashboard.py  test_option_scan.py
vibe_trading/: __init__.py  cli.py  dashboard.py  server.py  status.py
