[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-trading"
version = "0.1.0"
description = "Read-only dashboard server for the Box Swing v1.0 trading agent state"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }

[project.scripts]
vibe-trading = "vibe_trading.cli:main"

[tool.setuptools.packages.find]
include = ["vibe_trading*"]
